2000-05-31  Mark Kettenis  <kettenis@gnu.org>

	Add support for FreeBSD/Alpha.
	* configure.host, configure.tgt (alpha*-*-freebsd*): New entry.
	* alphabsd-nat.c, config/alpha/fbsd.mh, config/alpha/fbsd.mt,
	config/alpha/nm-fbsd.h, config/alpha/tm-fbsd.h,
	config/alpha/xm-fbsd.h: New files.

2000-05-31  Pierre Muller  <muller@sourceware.cygnus.com>

	* MAINTAINERS: Add myself to "Write After Approval" list.

Tue May 30 18:48:33 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Re-organize.

Tue May 30 11:22:28 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdbarch.sh: Add field ``postdefault''.  Rename fields
 	``startup'' and ``default'' to ``staticdefault'' and
 	``predefault''.  Fix initialization of valid_p.  Create/compare
 	gdbarch.log.

Mon May 29 22:47:16 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* config/sparc/nm-sun4sol2.h (GDB_GREGSET_T, GDB_FPREGSET_T):
 	Define.
	* config/sparc/xm-sun4sol2.h: (GDB_GREGSET_TYPE,
 	GDB_FPREGSET_TYPE): Delete.

Mon May 29 15:41:10 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* symtab.h (make_cleanup_free_search_symbols): Add declaration.
	* symtab.c (make_cleanup_free_search_symbols,
 	do_free_search_symbols_cleanup): New functions.
	(search_symbols, symtab_symbol_info, rbreak_command): Update.
	(search_symbols): Pass ``sr'', and not its address, to
 	make_cleanup_free_search_symbols.

2000-05-28  Kevin Buettner  <kevinb@redhat.com>

	* config/nm-linux.h (GDB_GREGSET_T, GDB_FPREGSET_T): Fix typos.

2000-05-27  Kevin Buettner  <kevinb@redhat.com>

	* abug-rom.c, alpha-nat.c, alpha-tdep.c, annotate.c,
	annotate.h, arc-tdep.c, ax-gdb.c, ax-gdb.h, ax-general.c,
	ax.h, breakpoint.c, breakpoint.h, c-exp.y, c-lang.c, c-lang.h,
	call-cmds.h, ch-exp.c, ch-lang.c, ch-lang.h, cli-out.c,
	coff-solib.h, coffread.c, command.c, command.h, complaints.c,
	complaints.h, config/a29k/tm-a29k.h, config/a29k/tm-vx29k.h,
	config/alpha/nm-linux.h, config/alpha/nm-osf.h,
	config/alpha/nm-osf2.h, config/alpha/tm-alpha.h,